# Marinara-Engine-Refactor

./: .dependency-cruiser.cjs  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/developer/: architecture.html  impact-areas.html  index.html  modules.html  run-build.html
docs/tauri-refactor/: 00-source-inventory.md  01-target-structure.md  02-rust-backend-modules.md  03-frontend-organization.md  04-feature-coverage-map.md  05-commands-and-events.md  06-migration-plan.md  07-crates-and-plugins.md  08-quality-rules.md  11-mermaid-diagrams.md  13-typescript-rust-organization-plan.md  14-layered-module-architecture.md  15-engine-migration-checklist.md  README.md  architecture.html  index.html  sync-server.html
skills/marinara-architecture-guard/: SKILL.md
skills/marinara-architecture-guard/references/: dependency-boundaries.md  repo-layout.md
skills/marinara-mode-separation/references/: mode-impact-map.md
src/: App.css
src-server/: Cargo.toml
src-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/assets/: Cargo.toml
src-tauri/crates/assets/src/: lib.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/handlers/: Cargo.toml
src-tauri/crates/handlers/src/: admin.rs  agents.rs  auth.rs  backgrounds.rs  chats.rs  entities.rs  fonts.rs  game_assets.rs  imports.rs  lib.rs  llm.rs  lorebook_images.rs  media_uploads.rs  profile.rs  shared.rs  storage.rs  tracker.rs
src-tauri/crates/handlers/src/images/: mod.rs  providers.rs
src-tauri/crates/handlers/src/imports/: bulk_imports.rs  timestamps.rs
src-tauri/crates/handlers/src/integrations/: mod.rs  spotify.rs  tts.rs
src-tauri/crates/handlers/src/profile/: assets.rs  legacy.rs  zip_import.rs
src-tauri/crates/import/: Cargo.toml
src-tauri/crates/import/src/: lib.rs
src-tauri/crates/integrations/: Cargo.toml
src-tauri/crates/integrations/src/: lib.rs
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/src/: lib.rs
src-tauri/crates/security/: Cargo.toml
src-tauri/crates/security/src/: lib.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/src/: lib.rs
src-tauri/crates/storage/src/memory/: events.rs  layout.rs  manifest.rs  mod.rs  rebuild.rs  validate.rs  vault.rs
src-tauri/crates/updates/: Cargo.toml
src-tauri/crates/updates/src/: lib.rs
src-tauri/src/: app.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: assets.rs  imports.rs  integrations.rs  llm.rs  mod.rs  storage.rs  updates.rs
src-tauri/src/commands/storage/: agents.rs  avatars.rs  backgrounds.rs  backup.rs  bot_browser.rs  chat_presets.rs  chats.rs  encounter.rs  exports.rs  fonts.rs  game.rs  game_assets.rs  game_state_snapshots.rs  generation.rs  http.rs  images.rs  imports.rs  integrations.rs  knowledge.rs  llm.rs  lorebook_images.rs  makers.rs  mari.rs  media_uploads.rs  memory.rs  profile.rs  prompts.rs  router.rs  scene.rs  shared.rs  sprites.rs  translation.rs
src-tauri/src/events/: mod.rs
src/app/: App.tsx  main.tsx
src/app/providers/: CustomThemeInjector.tsx
src/app/shell/: AppErrorBoundary.tsx  AppShell.tsx  ChatSidebar.tsx  ModalRenderer.tsx  PanelNavButtons.tsx  RightPanel.tsx  TopBar.tsx  WindowTitleBar.tsx  detail-route-registry.tsx  useStartNewChat.ts
src/app/startup/: chat-switch-effects.ts
src/engine/: index.ts
src/engine/agents-runtime/: index.ts
src/engine/capabilities/: assets.ts  events.ts  imports.ts  index.ts  integrations.ts  llm.ts  memory.ts  permissions.ts  storage.ts
src/engine/contracts/: index.ts
src/engine/core/: clock.ts  ids.ts  index.ts  json.ts  result.ts
src/engine/generation/: agent-normalizers.ts  agent-runner.ts  connected-commands.ts  context.ts  generate-route-utils.ts  generation-events.ts  index.ts  makers.ts  prompt-assembly.ts  prompt-reviewer.ts  runtime-records.ts  start-generation.ts  tracker-snapshots.ts
src/engine/generation-core/: index.ts
src/engine/modes/: index.ts
src/engine/repositories/: entity-repository.ts  index.ts  memory-repository.ts
src/engine/shared/: index.ts
src/features/settings/: types.ts
src/features/world-state/: types.ts
src/shared/api/: api-client.ts  api-errors.ts  assets-api.ts  auth-api.ts  avatar-api.ts  backup-api.ts  download-payload.ts  export-api.ts  image-generation-api.ts  import-api.ts  integration-gateway.ts  integration-utility-api.ts  integrations-api.ts  llm-api.ts  local-file-api.ts  memory-api.ts  profile-api.ts  settings-assets-api.ts  storage-api.ts  tauri-client.ts  tracker-snapshot-api.ts
src/shared/hooks/: use-apply-regex.ts  use-chats.ts
src/shared/lib/: backgrounds.ts  browser-runtime.ts  character-import.ts  chat-attachment-images.ts  notification-sound.ts  number-input.ts  slash-commands.ts  temperature-units.ts  tracker-card-colors.ts  tts-service.ts  url-blob.ts  utils.ts
src/shared/stores/: auth.store.ts  chat.store.ts  gallery.store.ts  game-asset.store.ts  sidecar.store.ts  ui.store.ts
src/shared/types/: gallery.ts  image-generation.ts  sprite-capabilities.ts
src/styles/: globals.css
updates/: README.md
updates/people/: muni.md  promansis.md
(+545 files in other folders)
