[package]
name = "marinara-server"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP gateway exposing the same domain code as the Tauri desktop binary for browser/VPS access."

[[bin]]
name = "marinara-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
marinara-core = { path = "../src-tauri/crates/core" }
marinara-storage = { path = "../src-tauri/crates/storage" }
marinara-handlers = { path = "../src-tauri/crates/handlers" }
