[package]
name = "marinara-handlers"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic command handlers shared by the Tauri desktop binary and the Axum server binary."

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
marinara-assets = { path = "../assets" }
marinara-core = { path = "../core" }
marinara-storage = { path = "../storage" }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
