[package]
name = "marinara-storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
marinara-core = { path = "../core" }
marinara-security = { path = "../security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
